# easer

./: .gitignore  CMakeLists.txt  README.md  shell.nix
cmake/: easer-lib-config.cmake.in
include/easer/: base.h  easer.h  serialization.h  stream.h  streamer.h
src/: app.cpp
test/: tester.cpp
